--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="unity-build-title">WorkshopGames</div>
       </div>
       <div style="margin-left: 50px; line-height: 38px; font-family: arial; font-size: 15px">
-        <div>(Versão executável Windows disponivel <a href="Windows-x86/WorkshopGames.zip" class="btn" target="_blank">aqui</a>)</div>
+        <div>(Versão executável Windows disponível <a href="Windows-x86/WorkshopGames.zip" class="btn" target="_blank">aqui</a>)</div>
       </div>
     </div>
     <script>
